# python-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  simple-ci.yml
